--- a/MySQL/全集系列.md
+++ b/MySQL/全集系列.md
@@ -1,2 +1,5 @@
 # 小林-图解MySQL
 https://xiaolincoding.com/mysql/
+
+# 民工哥--MySQL系列
+https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzI0MDQ4MTM5NQ==&action=getalbum&album_id=2796093473857929216&scene=173&from_msgid=2247536256&from_itemidx=2&count=3&nolastread=1#wechat_redirect
