--- a/Redis/全集系列.md
+++ b/Redis/全集系列.md
@@ -1,1 +1,6 @@
+# 小林-图解Redis
+https://xiaolincoding.com/redis/
+
+# 民工哥-Redis系列
+https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzI0MDQ4MTM5NQ==&action=getalbum&album_id=2859886684946333701&scene=173&from_msgid=2247538816&from_itemidx=2&count=3&nolastread=1#wechat_redirect
 
