--- a/Redis/全集系列.md
+++ b/Redis/全集系列.md
@@ -4,3 +4,8 @@ https://xiaolincoding.com/redis/
 # 民工哥-Redis系列
 https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzI0MDQ4MTM5NQ==&action=getalbum&album_id=2859886684946333701&scene=173&from_msgid=2247538816&from_itemidx=2&count=3&nolastread=1#wechat_redirect
 
+# 水滴与银弹--硬核Redis
+https://mp.weixin.qq.com/mp/appmsgalbum?action=getalbum&__biz=MzIyOTYxNDI5OA==&scene=1&album_id=1699766580538032128&count=3#wechat_redirect
+
+# 码哥字节--Redis系列
+https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzkzMDI1NjcyOQ==&action=getalbum&album_id=1918295695426404359&scene=173&from_msgid=2247487752&from_itemidx=1&count=3&nolastread=1#wechat_redirect
