--- a/MySQL/全集系列.md
+++ b/MySQL/全集系列.md
@@ -6,3 +6,6 @@ https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzI0MDQ4MTM5NQ==&action=getalbum&a
 
 # 竹子爱熊猫--全解MySQL系列
 https://juejin.cn/column/7140138832598401054
+
+# XMind图解
+https://www.processon.com/view/5e030f1de4b0125e291c48a5?fromnew=1#map
