--- a/Golang/全集系列.md
+++ b/Golang/全集系列.md
@@ -9,3 +9,6 @@ https://golang.design/under-the-hood/
 
 # 跟煎鱼学GO
 https://eddycjy.gitbook.io/golang/
+
+# 深入理解GO语言
+https://www.cnblogs.com/jiujuan/category/1691617.html
