--- a/算法与数据结构/全集系列.md
+++ b/算法与数据结构/全集系列.md
@@ -1,4 +1,13 @@
-# 算法与数据结构-Golang实现
+## 算法与数据结构-Golang实现
 https://hunterhug.gitlab.io/goa.c/#/
 
 https://github.com/hunterhug/goa.c
+
+## 拉勾教育-数据结构与算法面试宝典
+https://github.com/lagoueduCol/Algorithm-Dryad
+
+## Algorithms and Data Structures implemented in Go
+https://github.com/TheAlgorithms/Go
+
+https://github.com/Workiva/go-datastructures
+
