--- a/算法与数据结构/全集系列.md
+++ b/算法与数据结构/全集系列.md
@@ -6,10 +6,14 @@ https://github.com/hunterhug/goa.c
 ## 拉勾教育-数据结构与算法面试宝典
 https://github.com/lagoueduCol/Algorithm-Dryad
 
+## 王争-数据结构与算法
+https://github.com/wangzheng0822/algo/tree/master/go
+
 ## Algorithms and Data Structures implemented in Go
 https://github.com/TheAlgorithms/Go
 
 https://github.com/Workiva/go-datastructures
 
+常见的数据结构实现与配套的leetcode算法
 https://github.com/roseduan/algo-learn/tree/master
 
