--- a/Golang/全集系列.md
+++ b/Golang/全集系列.md
@@ -15,3 +15,7 @@ https://www.cnblogs.com/jiujuan/category/1691617.html
 
 # 玩转 Go
 https://wskdsgcf.gitbook.io/mastering-go-zh-cn/
+
+# 最全的Go资料汇总和最走心的学Go建议
+https://juejin.cn/post/7176518080674136121
+
