--- a/Golang/全集系列.md
+++ b/Golang/全集系列.md
@@ -19,3 +19,6 @@ https://wskdsgcf.gitbook.io/mastering-go-zh-cn/
 # 最全的Go资料汇总和最走心的学Go建议
 https://juejin.cn/post/7176518080674136121
 
+# Go 语言高性能编程
+https://geektutu.com/post/high-performance-go.html
+
