--- a/Redis/全集系列.md
+++ b/Redis/全集系列.md
@@ -10,3 +10,4 @@ https://mp.weixin.qq.com/mp/appmsgalbum?action=getalbum&__biz=MzIyOTYxNDI5OA==&s
 # 码哥字节--Redis系列
 https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzkzMDI1NjcyOQ==&action=getalbum&album_id=1918295695426404359&scene=173&from_msgid=2247487752&from_itemidx=1&count=3&nolastread=1#wechat_redirect
 
+![Redis](../images/redis_001.png "redis缓存雪崩")
