--- a/Golang/全集系列.md
+++ b/Golang/全集系列.md
@@ -22,3 +22,6 @@ https://juejin.cn/post/7176518080674136121
 # Go 语言高性能编程
 https://geektutu.com/post/high-performance-go.html
 
+# Go修养之路--刘丹冰
+https://github.com/aceld/golang
+
