--- a/Golang/学习资料系列.md
+++ b/Golang/学习资料系列.md
@@ -25,3 +25,5 @@ https://geektutu.com/post/high-performance-go.html
 # Go修养之路--刘丹冰
 https://github.com/aceld/golang
 
+# 返回主页九卷技术录--关注技术架构，管理，产品业务
+https://www.cnblogs.com/jiujuan/
