--- a/Golang/收藏的开源库.md
+++ b/Golang/收藏的开源库.md
@@ -1,2 +1,10 @@
-- 分布式任务队列  
-https://github.com/hibiken/asynq
+1.  基于Redis的分布式任务队列  
+https://github.com/hibiken/asynq  
+有如下特点：  
+    - 保证每个任务至少被消费一次
+    - 支持定时任务
+    - 支持任务消费失败重试
+    - 支持延时队列功能
+    - 支持redis集群模式（可横向扩展）和Sentinals（高可用）模式
+    - 支持批量消费任务
+    - 自带完善的监控功能
