--- a/Golang/收藏的开源库.md
+++ b/Golang/收藏的开源库.md
@@ -1,4 +1,4 @@
-1.  基于Redis的分布式任务队列  
+1. 基于Redis的分布式任务队列  
 https://github.com/hibiken/asynq  
 有如下特点：  
     - 保证每个任务至少被消费一次
@@ -8,3 +8,4 @@ https://github.com/hibiken/asynq
     - 支持redis集群模式（可横向扩展）和Sentinals（高可用）模式
     - 支持批量消费任务
     - 自带完善的监控功能
+2. 待补充
