--- a/Golang/收藏的开源库.md
+++ b/Golang/收藏的开源库.md
@@ -1,5 +1,6 @@
 1. 基于Redis的分布式任务队列  
-https://github.com/hibiken/asynq  
+https://github.com/hibiken/asynq
+    - 博客链接 https://juejin.cn/post/7241111319591403577?utm_source=gold_browser_extension#heading-26    
 有如下特点：  
     - 保证每个任务至少被消费一次
     - 支持定时任务
@@ -8,4 +9,4 @@ https://github.com/hibiken/asynq
     - 支持redis集群模式（可横向扩展）和Sentinals（高可用）模式
     - 支持批量消费任务
     - 自带完善的监控功能
-2. 待补充
+3. 待补充
