--- a/Golang/学习资料系列.md
+++ b/Golang/学习资料系列.md
@@ -26,7 +26,8 @@ https://geektutu.com/post/high-performance-go.html
 https://github.com/aceld/golang
 
 # 九卷技术录--关注技术架构，管理，产品业务
-https://www.cnblogs.com/jiujuan/
+  -  https://www.cnblogs.com/jiujuan/  
+  -  [Golang从入门到跑路] https://github.com/jiujuan/go-collection
 
 # Golang-每日一库  
 https://darjun.github.io/post/
