--- a/Golang/学习资料系列.md
+++ b/Golang/学习资料系列.md
@@ -28,6 +28,7 @@ https://github.com/aceld/golang
 # 九卷技术录--关注技术架构，管理，产品业务
   -  https://www.cnblogs.com/jiujuan/  
   -  [Golang从入门到跑路] https://github.com/jiujuan/go-collection
+  -  [博客文章分类] https://github.com/jiujuan/blog
 
 # Golang-每日一库  
 https://darjun.github.io/post/
