--- a/算法与数据结构/全集系列.md
+++ b/算法与数据结构/全集系列.md
@@ -14,6 +14,6 @@ https://github.com/TheAlgorithms/Go
 
 https://github.com/Workiva/go-datastructures
 
-常见的数据结构实现与配套的leetcode算法   
+常见的数据结构实现与配套的leetcode算法【*****】  
 https://github.com/roseduan/algo-learn/tree/master
 
