--- a/消息队列/资料.md
+++ b/消息队列/资料.md
@@ -1,2 +1,6 @@
 - 民工哥-消息中间件Kafka  
   https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzI0MDQ4MTM5NQ==&action=getalbum&album_id=3002038547455180802&scene=173&from_msgid=2247542397&from_itemidx=2&count=3&nolastread=1#wechat_redirect
+
+
+- Kafka思维导图  
+  https://processon.com/view/5fff01bb6376897ae0b610ff#map
