--- a/Golang/学习资料系列.md
+++ b/Golang/学习资料系列.md
@@ -32,3 +32,6 @@ https://github.com/aceld/golang
 
 # Golang-每日一库  
 https://darjun.github.io/post/
+
+# Go进阶训练营  
+https://lailin.xyz/post/go-training-week3-goroutine.html
