--- a/乱七八糟.md
+++ b/乱七八糟.md
@@ -89,3 +89,691 @@ https://github.com/marmotedu/awesome-books
 
 
 https://github.com/dunwu/javacore
+
+
+
+=====
+
+
+https://awesomeopensource.com/project/jiujuan/go-collection
+https://github.com/xiaobaiTech/golangFamily#%E4%B8%89%E6%96%B9%E5%8C%85
+https://github.com/shockerli/go-awesome
+https://github.com/yinggaozhen/awesome-go-cn
+
+go-kit组件(整合 CNCF 组件)，完善工具链，集成 mux 、gorm(整合opentracing)、config（etcdv3）、scaffold等
+github.com/go-kit/kit v0.12.0
+https://github.com/metaverse/truss
+https://github.com/GrantZheng/kit
+
+Go-Zero
+https://github.com/zeromicro/go-zero
+GoFrame
+https://github.com/gogf/gf
+
+
+
+# 日志 Log & logrotate
+zap
+Uber Zap文件日志切割
+	https://gist.github.com/toefel18/7f0b82127a4576d3a7d7b13d013b0f8b
+	https://github.com/natefinch/lumberjack
+	https://github.com/arthurkiller/rollingWriter
+slog 官方库 https://pkg.go.dev/golang.org/x/exp/slog
+
+
+# 配置管理
+https://github.com/spf13/viper
+
+
+# 服务发现/注册
+https://github.com/etcd-io/etcd
+
+
+# 熔断
+https://github.com/afex/hystrix-go（更新停滞）
+https://github.com/sony/gobreaker
+
+
+
+# 命令行cli
+https://github.com/spf13/cobra
+https://github.com/olekukonko/tablewriter # 命令行下的表格
+https://github.com/fatih/color # 引用了 https://github.com/mattn/go-colorable 做 windows 兼容
+https://github.com/briandowns/spinner # 轮菊花
+# TUI(Terminal UI)
+https://github.com/jroimartin/gocui # Console User Interfaces
+https://github.com/charmbracelet/bubbletea # 命令行下的单选、多选、进度条等组件
+
+# Web full stack
+https://github.com/livebud/bud/
+
+
+# Deamon进程优雅重启
+https://github.com/fvbock/endless
+https://github.com/cosmtrek/air # 修改后重新编译启动（平滑重启？）
+
+# Cache 缓存
+https://github.com/eko/gocache # 适配多个缓存库 及 多级缓存（chained cache）
+https://github.com/golang/groupcache  # 取代memcache？？？
+https://github.com/allegro/bigcache  # 缓存大数据？？？
+## 通用KV客户端
+https://github.com/philippgille/gokv
+
+
+# 消息队列
+https://github.com/nsqio/nsq
+
+
+# RPC框架
+https://github.com/smallnest/rpcx
+
+
+# 工具包util/helper
+https://github.com/samber/lo # A Lodash-style Go library based on Go 1.18+ Generics (map, filter, contains, find...)
+https://github.com/thoas/go-funk # A modern Go utility library which provides helpers (map, find, contains, filter, ...)
+https://github.com/gookit/goutil # Go 常用的一些工具函数，数字，字符串，数组，Map，文件，错误，时间日期，特殊处理，格式化，常用信息获取等等
+https://github.com/thinkeridea/go-extend
+https://github.com/duke-git/lancet # ancet（柳叶刀）是一个全面、高效、可复用的go语言工具函数库。 lancet受到了java apache common包和lodash.js的启发。
+https://github.com/q191201771/naza
+https://github.com/grokify/html-strip-tags-go # 类似PHP strip-tags()函数
+https://github.com/mailgun/holster
+https://github.com/antlabs/strsim # 字符串相似度
+
+# Enhanced Http client
+https://github.com/go-resty/resty
+https://github.com/h2non/gentleman
+https://github.com/dghubble/sling
+https://github.com/gojek/heimdall
+https://github.com/levigross/grequests
+https://github.com/ddliu/go-httpclient
+https://github.com/guonaihong/gout
+
+# http router 路由
+https://github.com/gorilla/mux
+https://github.com/julienschmidt/httprouter
+https://github.com/go-chi/chi
+https://github.com/gin-gonic/gin
+https://github.com/ucarion/urlpath # gofiber曾经的路径匹配
+
+# http middleware
+https://github.com/justinas/alice # middleware chain
+
+# Validation
+https://github.com/gookit/validate
+
+
+# 日期时间
+https://github.com/golang-module/carbon
+https://github.com/araddon/dateparse
+
+# Enum
+https://github.com/abice/go-enum
+https://github.com/alvaroloes/enumer
+https://github.com/dmarkham/enumer
+
+# Redis
+https://github.com/go-redis/redis # 客户端
+https://github.com/bitleak/go-redis-pool # 客户端，基于 go-redis 之上的读写分离（非sentinel）
+https://github.com/gomodule/redigo # 客户端 （需要手工归还连接池）
+https://github.com/rueian/rueidis # 客户端 A fast Golang Redis client that supports Client Side Caching, Auto Pipelining, Generics OM, RedisJSON, RedisBloom, RediSearch, RedisAI, RedisGears, etc.
+https://github.com/HDT3213/godis # A Golang implemented Redis Server and Cluster.
+https://github.com/alicebob/miniredis # Pure Go Redis server for Go unittests
+https://github.com/tidwall/redcon # Redis compatible server framework for Go 
+https://github.com/flower-corp/rosedb # 基于 redcon 库 实现的Redis Server
+
+
+# unique id
+https://github.com/edwingeng/wuid
+
+
+
+
+# 进程管理，类似supervisor
+https://www.bilibili.com/read/cv7228724
+
+# Bootstrapper for golang application. See https://rkdev.info/docs/ for details. 
+https://github.com/rookie-ninja/rk-boot # https://mp.weixin.qq.com/s/2v-4Z3Ew4DRq17SWGas63A
+
+
+# 取field、value；转换为map等
+https://github.com/fatih/structs
+# map转struct
+https://github.com/mitchellh/mapstructure
+# 字段相似的结构体复制
+https://github.com/jinzhu/copier
+https://github.com/ulule/deepcopier
+# Merge map 、struct、json？
+https://github.com/imdario/mergo （推荐） 合并structs或map: only structs and maps are supported
+# struct tag 提取
+https://github.com/fatih/structtag
+# 两个json字符串合并
+https://github.com/evanphx/json-patch
+https://github.com/Jeffail/gabs#merge-two-containers
+# 数据库表结构转structure
+https://github.com/xxjwxc/gormt
+https://github.com/yezihack/go-mygen
+# 高性能json库
+https://github.com/bytedance/sonic # sonic json
+https://github.com/goccy/go-json
+
+# 类似 PHP strip_tags()、HTMLPurifier库
+https://github.com/microcosm-cc/bluemonday
+https://github.com/grokify/html-strip-tags-go
+
+# 第三方编码解码、加密解密库
+https://github.com/golang-module/dongle
+
+# number precision 精度/格式化
+https://github.com/avelino/awesome-go#financial
+https://github.com/shopspring/decimal （推荐）
+https://github.com/piquette/finance-go
+https://github.com/leekchan/accounting
+
+# MIME
+## 通过读取文件头信息
+https://github.com/h2non/filetype # 第三方 https://stackoverflow.com/questions/51209439/mime-type-checking-of-files-uploaded-golang
+
+mimeType := http.DetectContentType(bytes) # 官方 # https://golangcode.com/get-the-content-type-of-file/ # https://freshman.tech/snippets/go/file-content-type/
+## 通过后缀名
+fmt.Println(mime.TypeByExtension(".jpg")) # 官方
+
+
+# 分布式事务
+https://github.com/dtm-labs/dtm # DTM是一款开源的分布式事务管理器，解决跨数据库、跨服务、跨语言栈更新数据的一致性问题。
+
+# 中文分词
+https://github.com/go-ego/gse
+https://github.com/yanyiwu/gojieba
+https://github.com/huichen/sego
+英文分词（官方库） https://pkg.go.dev/bufio#example-Scanner-Custom
+bufio.NewScanner
+scanner.Split() // 
+
+# 中文转拼音
+https://github.com/mozillazg/go-pinyin
+https://github.com/Lofanmi/pinyin-golang
+
+# 二维码
+https://github.com/skip2/go-qrcode
+https://github.com/claudiodangelis/qrcp
+
+# 文件目录监控inotify
+https://github.com/fsnotify/fsnotify
+
+
+# mock工具
+https://github.com/agiledragon/gomonkey
+https://github.com/vektra/mockery
+# 单测覆盖率
+https://github.com/smartystreets/goconvey
+# fake数据生成
+https://github.com/brianvoe/gofakeit
+压测工具
+https://github.com/gonetx/httpit
+
+# 性能/调试/APM
+https://github.com/ofabry/go-callvis
+https://github.com/pyroscope-io/pyroscope
+https://github.com/SigNoz/signoz # Open source Application Performance Monitoring (APM) & Observability tool 
+
+# GUI
+https://github.com/fyne-io/fyne
+https://github.com/gioui/gio
+
+# 鼠标键盘事件
+https://github.com/go-vgo/robotgo#examples
+
+
+# gRPC Debug client（nodejs）
+https://github.com/uw-labs/bloomrpc
+
+# ElasticSearch client lib
+https://github.com/olivere/elastic
+
+# murmur3 hash
+https://github.com/spaolacci/murmur3
+
+https://github.com/cespare/xxhash
+
+# 硬件探测
+https://github.com/jaypipes/ghw
+
+# 官方压缩库优化版？
+https://github.com/klauspost/compress
+
+# worker/groutine pool
+https://github.com/alitto/pond
+
+
+
+
+# 搜索引擎 
+https://github.com/prabhatsharma/zinc # A lightweight alternative to elasticsearch that requires minimal resources
+https://github.com/blevesearch/bleve
+
+
+# 数据导入导出
+https://github.com/mylxsw/heimdall/
+
+# 爬虫
+https://github.com/go-rod/rod
+https://github.com/gocolly/colly
+
+
+# 任务队列
+https://github.com/RichardKnop/machinery#periodic-tasks--workflows
+
+https://github.com/search?o=desc&q=algorithms&s=stars&type=Repositories
+
+# 短网址
+https://gitee.com/barat/ohurlshortener
+
+
+
+ansible web ui?
+https://ansible-semaphore.com/
+
+
+单点登录
+https://github.com/authelia/authelia
+
+
+# 语法、词法分析
+https://github.com/goccmack/gocc
+
+# 性能/调试
+revive 是一个 Go 语言的代码质量检测工具(Linter for Go)，具有快速、可配置、可扩展、灵活和美观这些特性，可作为 golint 的替代方案
+https://github.com/mgechev/revive
+
+go-callvis是以图片的形式展示了go程序的调用关系
+https://github.com/ofabry/go-callvis
+
+
+# 视频流媒体服务器
+https://github.com/gwuhaolin/livego
+
+https://github.com/q191201771/lal
+
+https://gitee.com/m7s/monibuca
+
+
+# PHP FastCGI client
+https://github.com/yookoala/gofast
+https://github.com/tomasen/fcgi_client
+
+
+
+格式转换 a native Golang ETL streaming parser and transform library for CSV, JSON, XML, EDI, text, 
+https://github.com/jf-tech/omniparser
+
+
+
+# 命令行工具
+## go命令行工具连各式各样数据库（适用没yum权限装client工具）
+https://github.com/xo/usql
+
+
+## 用SQL语句来替代find命令
+https://github.com/kashav/fsql
+
+编程操练项目（算法、网络、多线程等）
+https://github.com/karan/projects
+
+
+隐私保护工具
+https://github.com/omer-dogan/whoami
+
+
+代码分析/重构
+https://github.com/inherd/coca
+
+
+go http load 测试
+https://github.com/tsenart/vegeta
+
+
+# 开放的api整理？？？
+https://github.com/public-apis/public-apis
+https://github.com/n0shake/Public-APIs
+
+
+
+邮件聚合通知？？？Self-hosted newsletter & mailing list manager
+https://github.com/knadh/listmonk
+
+
+
+FastWeGo 是一组 Go 服务快速开发 sdk，支持微信公众号、小程序、小游戏、企业微信、微信支付等微信服务，以及 飞书、钉钉
+https://fastwego.dev/
+
+// 微信（WeChat）、支付宝（AliPay）的Go版本SDK。【极简、易用的聚合支付SDK】
+https://github.com/go-pay/gopay
+
+// 微信SDK
+https://github.com/silenceper/wechat
+https://github.com/royalrick/weapp
+https://github.com/xen0n/go-workwx
+https://github.com/shenghui0779/gochat
+
+
+
+# 快速后台
+https://github.com/go-admin-team/go-admin
+https://github.com/flipped-aurora/gin-vue-admin
+https://github.com/GoAdminGroup/go-admin
+https://github.com/qor/qor
+
+# 快速api
+https://github.com/xinliangnote/go-gin-api
+
+# 快速开发（有点serverless的意思，用encore生成项目，用encore本地调试，用encore上传到encoredev云）
+https://github.com/encoredev/encore
+
+# 自动生成证书 自动证书管理环境（ACME）
+https://pkg.go.dev/golang.org/x/crypto/acme/autocert （官方）
+https://github.com/go-acme/lego
+https://colobu.com/2017/09/30/use-letsencrypt-in-go/    使用 Go 和 Let's Encrypt 快速配置HTTPS加密
+
+
+# 图表
+https://darjun.github.io/2020/04/12/godailylib/plot/
+https://github.com/vicanso/go-charts
+
+# 存储
+https://github.com/beyondstorage/go-storage
+https://github.com/minio/minio
+## 云原生文件存储 —— JuiceFS。
+https://my.oschina.net/u/5324949/blog/5510281
+https://www.juicefs.com/docs/zh/community/introduction/
+
+# 快速文件分享
+https://github.com/dutchcoders/transfer.sh/
+https://github.com/schollz/croc
+
+
+# cloud drive 网盘
+https://github.com/syncthing/syncthing
+https://github.com/rclone/rclone    https://rclone.org/
+https://github.com/cloudreve/Cloudreve
+https://github.com/saltbo/zpan
+https://github.com/eyebluecn/tank
+https://github.com/zhaojun1998/zfile
+https://github.com/KOHGYLW/kiftd
+
+
+https://github.com/mickael-kerjean/filestash # A Dropbox-like file manager that let you manage your data anywhere it is located
+https://github.com/filebrowser/filebrowser # 把本地目录映射出去
+
+# 文件同步
+https://gitee.com/no-src/gofs # localDisk/sftp/minio
+
+
+Web Server
+caddy 替换 nginx
+https://caddyserver.com/docs/caddyfile/directives/php_fastcgi
+https://dengxiaolong.com/caddy/zh/example.laravel.html
+https://zhuanlan.zhihu.com/p/26839519
+https://segmentfault.com/a/1190000039151612
+https://zhuanlan.zhihu.com/p/144208057
+
+
+持续集成 替换 Jenkins
+https://github.com/drone/drone
+
+
+Slack替代品
+https://github.com/mattermost/mattermost-server
+
+
+
+openfaas
+https://github.com/openfaas/faas
+
+
+# 文本处理
+https://github.com/jdkato/prose
+https://github.com/golang/text
+https://github.com/kr/text
+nano加强，vim替代品
+https://github.com/zyedidia/micro
+
+
+# 图形/图像
+Open-Source Photo Management
+https://github.com/photoprism/photoprism
+
+
+数据安全
+https://github.com/hashicorp/vault
+
+
+人脸识别
+https://github.com/esimov/pigo
+
+
+# SSH
+	https://github.com/sorenisanerd/gotty # Share your terminal as a web application
+
+	SSH Server
+	https://github.com/gliderlabs/ssh
+	https://github.com/jaksi/sshesame
+	https://github.com/mojocn/felix   (Bastion 堡垒机）
+	https://github.com/moul/sshportal (Bastion 堡垒机）
+
+	SSH Client
+	https://github.com/helloyi/go-sshclient
+	https://github.com/moul/assh 多级代理
+
+	Expect
+	https://github.com/google/goexpect
+	https://github.com/Netflix/go-expect
+	https://github.com/fgimian/paramiko-expect (Python)
+
+
+# 非官方net库，重新封装epoll
+https://github.com/tidwall/evio
+https://github.com/panjf2000/gnet
+https://github.com/Allenxuxu/gev
+https://github.com/cloudwego/netpoll
+https://juejin.cn/post/6844903943059980295
+https://www.oschina.net/news/159372/bytedance-opensource-cloudwego
+
+# net packet sniff/caputure 网络包（嗅探、捕获）
+https://mp.weixin.qq.com/s/ibVM2ruofb397JMT1pts5w
+https://github.com/rfyiamcool/go-netflow
+
+
+# DNS
+https://github.com/miekg/dns
+
+
+CDN
+https://github.com/TeaOSLab/EdgeAdmin
+
+
+MySQL Server
+https://github.com/dolthub/go-mysql-server
+
+golang实现的sqlite
+https://gitlab.com/cznic/sqlite
+
+
+分布式数据库
+https://github.com/cockroachdb/cockroach
+
+
+
+
+
+git服务
+https://github.com/gogs/gogs 
+https://github.com/go-gitea/gitea # 相比Gogs，感觉分支出来的Gitea更好用一些，可以直接在QQ群里跟核心成员提意见，改进的效率也非常高
+git客户端
+https://github.com/cli/cli
+https://github.com/nektos/act
+https://github.com/google/go-github # github go客户端
+
+
+
+
+
+K8S
+https://github.com/kubernetes/minikube
+https://github.com/pixie-io/pixie
+https://github.com/weaveworks/weave-gitops
+
+
+机器学习/数据挖掘
+https://github.com/mlflow/mlflow
+https://github.com/biolab/orange3
+
+
+大数据可视化
+https://github.com/apache/superset
+
+
+
+OBS Studio 是一款用于实时流媒体和屏幕录制的软件
+https://github.com/obsproject/obs-studio
+
+
+Shotcut 是一款跨平台的视频编辑工具，可以在 Mac、Linux、BSD 和 Windows 上运行 
+https://github.com/mltframework/shotcut
+
+
+
+Scanner 漏洞、肉鸡扫描
+https://github.com/search?l=Go&o=desc&q=scanner&s=stars&type=Repositories
+https://github.com/We5ter/Scanners-Box/blob/master/README_CN.md
+
+
+
+
+Java 二维码/条码识别、身份证识别、银行卡识别、车牌识别、图片文字识别、黄图识别、驾驶证（驾照）识别 
+https://github.com/shouzhong/Scanner
+
+
+
+加密备份工具
+https://github.com/restic/restic
+
+
+漂亮的Go语言通用后台管理系统，包含：计划任务 / MySQL管理 / Redis管理 / FTP管理 / SSH管理 / 服务器管理 / Caddy配置 / DDNS / FRP可视化配置 / 云存储管理 等功能。可运行于 Windows / Linux / MacOS 等主流系统平台和 树莓派 / 路由器 等ARM设备
+https://github.com/admpub/nging
+
+
+
+# Security
+An HTTP toolkit for security research.
+https://github.com/dstotijn/hetty
+
+
+
+# ci/cd
+gitlab pipeline
+https://github.com/harness/drone
+https://gitee.com/goploy/goploy
+
+
+# 即时通讯
+https://github.com/tinode/chat # Instant messaging platform. Backend in Go. Clients: Swift iOS, Java Android, JS webapp, scriptable command line; chatbots 
+
+# 下载工具
+https://github.com/monkeyWie/gopeed
+
+GitHub 生成星星趋势图
+https://github.com/caarlos0/starcharts
+
+
+QQ?
+https://github.com/Mrs4s/go-cqhttp
+
+消息推送系统
+https://github.com/Mrs4s/go-cqhttp
+
+
+# 生成UML图
+https://github.com/jfeliu007/goplantuml
+
+生成各种License
+https://github.com/tmrts/boilr
+
+
+嗅探工具
+https://github.com/edoardottt/scilla
+
+# golang queue 消息队列
+https://github.com/avelino/awesome-go#queues
+https://github.com/phf/go-queue
+https://github.com/gammazero/deque
+https://github.com/enriquebris/goconcurrentqueue
+
+https://colobu.com/2020/08/14/lock-free-queue-in-go/
+https://www.delftstack.com/zh/howto/go/queue-implementation-in-golang/
+
+
+# 仿laravel
+https://github.com/goravel/goravel
+https://github.com/confetti-framework/confetti
+https://github.com/goal-web/goal
+
+
+
+
+
+任务调度
+https://github.com/contribsys/faktory （部分开源，要钱）
+## Distributed Task Queue （类似Python Celery）
+https://github.com/hibiken/asynq # https://nickest14.medium.com/asynq-golang-distributed-task-queue-library-75de3424a830
+https://github.com/RichardKnop/machinery（停更）
+https://github.com/gocelery/gocelery（停更）
+https://github.com/ajvb/kala （Kala is a simplistic, modern, and performant job scheduler）
+https://github.com/tj/robo
+https://github.com/libi/dcron
+
+
+# Cron定时任务
+
+cron库
+https://github.com/go-co-op/gocron（依赖robfig/cron ）
+https://github.com/robfig/cron （Parser）
+https://github.com/adhocore/gronx （Parser）
+https://github.com/reugn/go-quartz
+
+
+cron 带Web UI（基于robfig/cron）
+https://github.com/deepaksinghvi/cdule
+https://github.com/yohamta/dagu
+https://github.com/ouqiang/gocron（停更）
+
+
+热重载 Go 应用的工具
+https://github.com/cosmtrek/air
+
+
+
+
+代码生成器
+https://github.com/avelino/awesome-go#generators
+
+
+
+# go版leveldb
+https://github.com/syndtr/goleveldb
+
+
+
+# downloador
+https://github.com/iawia002/lux
+
+
+
+
+# golang memory filesystem 内存文件系统：
+https://github.com/psanford/memfs
+https://juejin.cn/post/6844904037511331854
+
+# 共享内存 shm/mmap:
+https://github.com/hidez8891/shm
+https://github.com/edsrzf/mmap-go
+https://github.com/overtalk/shm
