Update and rename 全集系列.md to 专栏系列.md

--- a/MySQL/专栏系列.md
+++ b/MySQL/专栏系列.md
@@ -9,3 +9,6 @@ https://juejin.cn/column/7140138832598401054
 
 # XMind-MySQL整体图解
 https://www.processon.com/view/5e030f1de4b0125e291c48a5?fromnew=1#map
+
+# 田螺哥的MySQL专栏  
+https://mp.weixin.qq.com/s/G8fWBvZPy6yxAyggwwx1NA
