--- a/MySQL/08_实战篇.md
+++ b/MySQL/08_实战篇.md
@@ -1,3 +1,6 @@
 - SQL优化思路+经典案例分析  
   https://mp.weixin.qq.com/s/BbrLQWGYlkXiy6t4YANj0Q
   ![MySQl](../images/mysql/001.jpg "SQL优化思路+经典案例分析")
+  
+- 盘点MySQL慢查询的12个原因  
+  https://mp.weixin.qq.com/s/gz-wQPsaerf4k7ymG8DiDA
