--- a/Redis/应用篇.md
+++ b/Redis/应用篇.md
@@ -1,9 +1,10 @@
-- 缓存和数据库双写一致性问题  
+### 缓存和数据库双写一致性问题  
   田螺： https://juejin.cn/post/6964531365643550751#heading-11  
   水滴与银弹：https://mp.weixin.qq.com/s?__biz=MzIyOTYxNDI5OA==&mid=2247487312&idx=1&sn=fa19566f5729d6598155b5c676eee62d&chksm=e8beb8e5dfc931f3e35655da9da0b61c79f2843101c130cf38996446975014f958a6481aacf1&scene=178&cur_album_id=1699766580538032128#rd
 
 
-- 七种方案！探讨Redis分布式锁的正确使用姿势    
-  https://juejin.cn/post/6936956908007850014
-- Redis分布式锁的10个坑  
-  https://juejin.cn/post/7178327462869205051
+### Redis实现分布式锁
+  - 七种方案！探讨Redis分布式锁的正确使用姿势    
+     https://juejin.cn/post/6936956908007850014
+  - Redis分布式锁的10个坑  
+     https://juejin.cn/post/7178327462869205051
