--- a/Redis/应用篇.md
+++ b/Redis/应用篇.md
@@ -6,6 +6,8 @@
 
 
 ### Redis实现分布式锁
+  - 悟空聊架构: 详解 Redis 分布式锁的 5 种方案
+    https://mp.weixin.qq.com/s/u_y2fajEZfumT64IAz9w_Q
   - 七种方案！探讨Redis分布式锁的正确使用姿势    
      https://juejin.cn/post/6936956908007850014
   - Redis分布式锁的10个坑  
