--- a/Redis/面试篇.md
+++ b/Redis/面试篇.md
@@ -1,5 +1,11 @@
 - 两万字详解Redis经典面试题（珍藏版）  
   https://juejin.cn/post/7002011542145204261
 
+- 面渣逆袭：Redis连环五十二问！三万字+八十图详解
+  https://mp.weixin.qq.com/s/iJtNJYgirRugNBnzxkbB4Q
+
+- 一不小心肝出了4W字的Redis面试教程
+  https://mp.weixin.qq.com/s/fe80eN8oMhS7VUIbqRgL-Q
+
 - 经典三连问
   ![Redis](../images/redis_001.png "redis缓存雪崩")
