--- a/Golang/学习资料系列.md
+++ b/Golang/学习资料系列.md
@@ -33,6 +33,10 @@ https://github.com/aceld/golang
 # Golang-每日一库  
 https://darjun.github.io/post/
 
+# Go语言必知必会  
+  - 地址： https://golang.dbwu.tech
+  - Github: https://github.com/duanbiaowu/go-examples-for-beginners
+
 # Go进阶训练营  
 https://lailin.xyz/post/go-training-week3-goroutine.html
 
