--- a/Golang/底层原理篇.md
+++ b/Golang/底层原理篇.md
@@ -1,1 +1,8 @@
+- 你真的了解go语言中的切片吗？
+  https://mp.weixin.qq.com/s/uNajVcWr4mZpof1eNemfmQ
 
+- Golang map实现原理
+  https://mp.weixin.qq.com/s/PT1zpv3bvJiIJweN3mvX7g
+
+- Golang GMP原理
+  https://mp.weixin.qq.com/s/jIWe3nMP6yiuXeBQgmePDg
