--- a/Golang/底层原理篇.md
+++ b/Golang/底层原理篇.md
@@ -6,3 +6,6 @@
 
 - Golang GMP原理  
   https://mp.weixin.qq.com/s/jIWe3nMP6yiuXeBQgmePDg
+
+- Golang 单机锁原理  
+  https://mp.weixin.qq.com/s/5o0pR0RDaasKh4veXTctVg
