--- a/消息队列/资料.md
+++ b/消息队列/资料.md
@@ -4,3 +4,6 @@
 
 - Kafka思维导图  
   https://processon.com/view/5fff01bb6376897ae0b610ff#map
+
+- 码哥字节--Kafka系列
+  https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MzkzMDI1NjcyOQ==&action=getalbum&album_id=1918297111809310722&scene=173&from_msgid=2247487774&from_itemidx=1&count=3&nolastread=1#wechat_redirect
